--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,38 +12,44 @@ img {
 }
 
 a {
-  color: white;
+  color: var(--primary-color);
   text-decoration: none;
 }
 
-input, button {
-  border-radius: 5px;
+a:hover {
+  text-decoration: underline;
 }
 
-input, label {
+nav a {
+  color: white;
+}
+
+nav a:hover {
+  text-decoration: none;
+}
+
+label {
   font-size: larger;
 }
 
-input {
-  padding: .6em;
-  outline: none;
-  background-color: whitesmoke;
-  transition: border linear .2s;
-}
-
-input:focus {
-  border: 2px solid var(--primary-color );
-}
-
 button {
+  border-radius: 5px;
   background-color: var(--primary-color);
   color: white;
   padding: .7em;
   font-size: x-large;
   border: none;
+  opacity: .9;
 }
 
 button:focus, button:hover {
   cursor: pointer;
-  background-color: #f6af21;
+  opacity: 1;
+}
+
+.man_thinking_svg {
+  position: absolute;
+  z-index: -1;
+  height: 500px;
+  transform: translate(-125%, 25%);
 }
