Fix theme color

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #7e6df3;
+  --primary-color: #7c589a;
   font-family: 'Ubuntu', sans-serif;
   line-height: 1.5;
   font-weight: 400;
