--- a/src/styles/utils/Card.css
+++ b/src/styles/utils/Card.css
@@ -1,6 +1,7 @@
 .card {
-  background-color: #7c589a;
+  background-color: var(--primary-color);
   color: white;
+  opacity: .9;
   padding: 1em 2em;
   border-radius: 10px;
   font-size: xx-large;
@@ -8,5 +9,5 @@
 
 .card:hover {
   cursor: pointer;
-  background-color: var(--primary-color);
+  opacity: 1;
 }
